--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,29 +8,17 @@
   }
 }
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  color: white;
+  background: black;
+  background-image: url('/rrreflection.svg');
+  background-size: cover;
   font-family: var(--font-space-grotesk);
+}
+
+.active {
+  font-weight: 500;
+  color: #2dd4bf;
 }
 
 .ficon:hover path {
