Add hamburger menu

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,5 +9,7 @@
 }
 
 body {
+  background-image: url("/rrreflection.svg");
+  background-size: contain;
   font-family: var(--font-space-grotesk);
 }
