Change navigation to use react-scroll

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,3 +15,8 @@ body {
   background-repeat: no-repeat;
   font-family: var(--font-space-grotesk);
 }
+
+.active {
+  color: magenta;
+  font-weight: 400;
+}
