--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,6 +19,13 @@
   strong {
     @apply font-medium text-purple-600 dark:text-purple-300;
   }
+  ::-moz-selection {
+    @apply bg-purple-400/75 text-neutral-50;
+  }
+
+  ::selection {
+    @apply bg-purple-400/75 text-neutral-50;
+  }
 }
 
 @layer components {
@@ -26,9 +33,9 @@
     @apply font-normal uppercase text-purple-500;
   }
   .btn-primary {
-    @apply rounded-xl border border-purple-600  bg-purple-600 px-4 py-2 text-xl font-light text-neutral-50 duration-500 hover:border-purple-800 hover:bg-purple-800 hover:shadow-xl md:text-2xl dark:hover:border-purple-800 dark:hover:bg-purple-800;
+    @apply rounded-xl border border-purple-600  bg-purple-600 px-4 py-2 text-xl font-light text-neutral-50 duration-500 hover:border-purple-800 hover:bg-purple-800 hover:shadow-xl dark:hover:border-purple-800 dark:hover:bg-purple-800 md:text-2xl;
   }
   .btn-secondary {
-    @apply rounded-xl border border-teal-400 bg-neutral-50 px-4 py-2 text-xl font-light text-teal-400 duration-500 hover:border-teal-400 hover:bg-teal-400 hover:text-neutral-50 hover:shadow-xl md:text-2xl dark:bg-neutral-950 dark:hover:border-teal-600 dark:hover:bg-teal-600;
+    @apply rounded-xl border border-teal-400 bg-neutral-50 px-4 py-2 text-xl font-light text-teal-400 duration-500 hover:border-teal-400 hover:bg-teal-400 hover:text-neutral-50 hover:shadow-xl dark:bg-neutral-950 dark:hover:border-teal-600 dark:hover:bg-teal-600 md:text-2xl;
   }
 }
